# num-bigfloat

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  table_gen.py
.github/workflows/: 1-rustfmt.yml  2-tests.yml  rust.yml
src/: defs.rs  ext.rs  lib.rs  num_traits.rs  parser.rs  serde.rs  util.rs
src/inc/: inc.rs  mod.rs
src/inc/ops/: add.rs  cbrt.rs  log.rs  mod.rs  mul.rs  other.rs  pow.rs  sqrt.rs  trig.rs  trigh.rs  util.rs
src/inc/ops/tables/: asin_const.rs  asinh_const.rs  atan_const.rs  cbrt_const.rs  exp_const.rs  fact_const.rs  ln_const.rs  mod.rs  sin_const.rs  sqrt_const.rs  tan_const.rs  tanh_const.rs
src/ops/: add.rs  cbrt.rs  log.rs  mod.rs  mul.rs  other.rs  pow.rs  sqrt.rs  trig.rs  trigh.rs  util.rs
