[package]
name = "num-bigfloat"
version = "1.6.0"
edition = "2021"
authors = ["stencillogic <stencillogic@gmail.com>"]
license = "MIT"
description = "Increased precision floating point numbers implemented purely in Rust."
categories = ["algorithms", "data-structures", "science"]
keywords = ["big-float", "numeric", "decimal", "mathematics", "bignum"]
readme = "README.md"
repository = "https://github.com/stencillogic/num-bigfloat"

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0"

[dependencies]
serde = { version = "~1.0.147", optional = true, default-features = false, features = ['derive'] }
rand = { version = "~0.8.5", optional = true, default-features = false }
num-traits = { version = "~0.2.15", optional = true, default-features = false }

[features]
default = ["std", "rand", "serde", "num-traits"]
std = ["serde/std", "num-traits/std", "rand/std", "rand/std_rng"]
serde = ["dep:serde"]
rand = ["dep:rand", "std"]
num-traits = ["dep:num-traits"]

[profile.release]
opt-level = 3
lto = true

[package.metadata.docs.rs]
all-features = true